Fix overflow for recipe ingredient modal

--- a/src/app/shared/recipe-ingredient-modal/recipe-ingredient-modal.component.scss
+++ b/src/app/shared/recipe-ingredient-modal/recipe-ingredient-modal.component.scss
@@ -1,5 +1,5 @@
 .ingredient-list {
-  max-height: 70vh;
+  max-height: 30vh;
   overflow: auto;
   margin-bottom: 10px;
 }
